kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ${APPLICATION_NAME}
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vocabulary
    gethomepage.dev/icon: mdi-book-alphabet
    gethomepage.dev/group: 1P
spec:
  tls:
    - hosts:
        - ${K8S_INGRESS_HOST}
      secretName: ${APPLICATION_NAME}
  rules:
    - host: ${K8S_INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vocabulary
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vocabulary
    gethomepage.dev/icon: mdi-book-alphabet
    gethomepage.dev/group: 1P
spec:
  hostnames:
    - vocabulary.home.maximemoreillon.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vocabulary
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
